--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,7 +23,7 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                  <div class="collapse navbar-collapse justify-content-end mx-5" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link text-dark px-4 fw-bold" aria-current="page" href="#">Home</a>
@@ -43,10 +44,10 @@
               <section class="container">
                   <div class="row d-flex align-items-center mt-3">
                       <div class="col-md-6 col-sm-12">
-                          <h1 class="display-3  bebas-family">BE THE PENGUINS</h1>
-                          <h1 class="display-3  bebas-family">OF WINNER</h1>
-                          <P class="text-family w-75">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores natus quidem! Eos soluta.</P>
-                          <button class="btn btn-success btn-lg fs-6">Buy Now</button>
+                          <h1 class="display-3  bebas-family orange">BE THE PENGUINS</h1>
+                          <h1 class="display-3  bebas-family blue">OF WINNER</h1>
+                          <P class="text-family w-75 black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores natus quidem! Eos soluta.</P>
+                          <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
                       </div>
                       <div class="col-md-6 col-sm-12">
                           <img class="img-fluid" src="images/profile.png" alt="">
@@ -56,6 +57,165 @@
         </div>
         
     </header>
+    <main class="container">
+        <section id="" class="mt-5">
+            <h2 class="mb-5 bebas-family display-5 blue ">WOMEN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-1">
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="w-75 mx-auto d-block mt-4" src="images/SeekPng 1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title roboto-family fw-bolder blue">Yellow Coat Jacket </h4>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="mx-auto d-block mt-4" style="width: 55%;" src="images/PngItem_2597366 1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title roboto-family fw-bolder blue">Ladies Jacket</h4>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="mx-auto d-block mt-4" style="width: 65%;" src="images/image 15.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title roboto-family fw-bolder blue">Woman Leather Jacket</h5>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section style="height: 50px;">
+
+        </section>
+
+        <section id="" class="mt-5">
+            <h2 class="mb-5 bebas-family display-5 blue ">MEN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-1">
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="mx-auto d-block mt-4" style="width: 58%;" src="images/image 11.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title roboto-family fw-bolder blue">Snowboard Jacket Mens</h4>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="w-75 mx-auto d-block mt-4" src="images/vippng 1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title roboto-family fw-bolder blue">Man Leather Jackets</h4>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow border-round">
+                        <div class="m-auto my-3 image-border">
+                            <img class="mx-auto d-block mt-4" style="width: 53%;" src="images/toppng 1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title roboto-family fw-bolder blue">Man Casual Jackets</h5>
+                            <p class="card-text roboto-family black">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div class="card-footer penguin-footer d-flex justify-content-between align-items-center pb-4">
+                            <h2 class="roboto-family orange fw-bolder">$234</h2>
+                            <button class="btn-lg fs-6 btn-style roboto-family fw-light"><i class="fas fa-shopping-cart"></i>  BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container" style="margin-top: 12%;">
+            <div class="row column-direction">
+                <div class="col-md-5 col-sm-12">
+                    <div class="row d-flex align-items-center shadow service-box ">
+                        <div class="col-md-3">
+                            <img class="ps-4" src="logos/image 12.png" alt="">
+                        </div>
+                        <div class="col-md-9">
+                            <h3 class="roboto-family blue fw-bold">Find the Perfect Fit</h3>
+                            <p class="roboto-family black">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="row d-flex align-items-center shadow service-box mt-3">
+                        <div class="col-md-3">
+                            <img class="ps-4" src="logos/image 13.png" alt="">
+                        </div>
+                        <div class="col-md-9">
+                            <h3 class="roboto-family blue fw-bold">Free Exchanges</h3>
+                            <p class="roboto-family black">One of the many reasons you can shop
+                                with peace of mind.</p>
+                        </div>
+                    </div>
+                    <div class="row d-flex align-items-center shadow service-box mt-3">
+                        <div class="col-md-3">
+                            <img class="ps-4" src="logos/image 14.png" alt="">
+                        </div>
+                        <div class="col-md-9">
+                            <h3 class="roboto-family blue fw-bold">Contact Our Sellert</h3>
+                            <p class="roboto-family black">They are here to help you. That's quite 
+                                literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7 col-sm-12">
+                    <img class="img-fluid w-75 ms-5 mb-4" src="logos/XMLID 1.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section style="height: 500px;">
+        </section>
+    </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
